- Font size in menu; - Spacing minor fix for landing.

--- a/themes/ace-documentation/assets/css/bootstrap/_navbar.scss
+++ b/themes/ace-documentation/assets/css/bootstrap/_navbar.scss
@@ -79,7 +79,7 @@
   .nav-link {
     padding-right: 0;
     padding-left: 0;
-    font-size: 14px;
+    font-size: 1rem;
   }
 
   .dropdown-menu {
